package com.Stevedores.Stevedores.Model.Resource.dto;

public enum ResourceAccess {
    EXTERNAL,
    INTERNAL
}
