package com.Stevedores.Stevedores.Model;

public enum PortOrderStatus {
    IN_PROGRESS,
    CANCELLED,
    CHANGE_REQUESTED,
    CONFIRMED,
    ACKNOWLEDGED,
    PLACED
}
