package com.Stevedores.Stevedores.Model.PortServiceOrder;

public enum ChangeStatus {
    REQUESTED,
    APPROVED,
    REJECTED
}
